--- a/Exercise.Rmd
+++ b/Exercise.Rmd
@@ -48,15 +48,15 @@ df_fh <- readr::read_csv(here::here("fetal_health.csv")) %>%
 # Question 1 Data Visualization and Summary Statistics {-}
 
 ## a) {-}
-Is this data ready for you to work with? If no, transform it into a ready to use form, if yes, explain why.
+**Is this data ready for you to work with? If no, transform it into a ready to use form, if yes, explain why.**
 
 *Solution:* Yes, this data is ready to use because it is in a tidy format. Each column is a variable and each row is one observation. Each cell contains 1 value of the variable.
 
 ## b) {-}
 
-Your sister is concerned that her baby does not move as much, which could be a sign of an unhealthy pregnancy. 
+**Your sister is concerned that her baby does not move as much, which could be a sign of an unhealthy pregnancy.**
 
-Use a density graph, show her the distribution of fetal movements according to different fetal health classifications. You do not have to interpret this graph.
+**Use a density graph, show her the distribution of fetal movements according to different fetal health classifications. You do not have to interpret this graph.**
 
 *Solution:*
 
@@ -79,7 +79,7 @@ df_fh %>%
 
 ## c) {-}
 
-Your sister's partner tells you that he is colourblind, please fix the graph produced above to provide him with a colourblind-friendly graph.
+**Your sister's partner tells you that he is colourblind, please fix the graph produced above to provide him with a colourblind-friendly graph.**
 
 *Solution:* We can use the "RColorBrewer" package and look for a colourblind-friendly palette. Then apply the package to our ggplot.
 
@@ -97,9 +97,11 @@ df_fh %>%
 ```
 
 ## d) {-}
-Your sister also said she thinks her baby's heart rate is faster than normal, which could be a sign of unhealthy pregnancy.
+**Your sister also said she thinks her baby's heart rate is faster than normal, which could be a sign of unhealthy pregnancy.**
 
-Looking at the 3 different classification of fetal health status and each fetus' baseline heart rate, provide an appropriate graphic summarizing the distribution of each of baseline heart rates for each class. Be sure to provide the correct title and label for the plot.
+**Looking at the 3 different classification of fetal health status and each fetus' baseline heart rate, provide an appropriate graphic summarizing the distribution of each of baseline heart rates for each class. Be sure to provide the correct title and label for the plot.**
+
+**Comment on the boxplot, what are the characteristics of each category?**
 
 *Solution:*
 
@@ -115,20 +117,17 @@ df_fh %>%
 
 ```
 
-## e) {-}
-Comment on the boxplot, what are the characteristics of each category?
-
-*Solution:* 
-
 The objective was to show the distribution of baseline heart rates in each health category. The graph above shows that the median fetal baseline heart rate was similar between Normal and Pathological fetuses; both are lower than the suspect group. The range of baseline heart rate was wider for the normal group, and the range for the pathological group is the narrowest. The baseline heart rates were rightly skewed for Normal and Pathological groups. There is considerable overlap between the boxplots of normal category and pathological category, it does not appear that the baseline heart rate significantly differs between these two groups.
 
-# Question 2 {-}
+\newpage
+
+# Question 2 Parameters and Bootstrapping {-}
 
 ## a) {-}
 
-Your sister thinks that more uterine contraction means that her fetus is unhealthy and she is more likely to give a pre-term birth. 
+**Your sister thinks that more uterine contraction means that her fetus is unhealthy and she is more likely to give a pre-term birth. **
 
-Is her statement true? What is the mean uterine contraction for each class?
+**Is her statement true? What is the mean uterine contraction for each class?**
 
 *Solution:*
 
@@ -151,7 +150,7 @@ Nevertheless, further testing is required to confirm this observation.
 
 ## b) {-}
 
-Since we have a small sample size for those who are suspected to be pathological and those who are determined to be pathological, what is one method that we can use to artificially create a pseudo-population and calculate the median of these two groups? State your assumptions.
+**Since we have a small sample size for those who are suspected to be pathological and those who are determined to be pathological, what is one method that we can use to artificially create a pseudo-population and calculate the median of these two groups? State your assumptions.**
 
 *Solution:*  Bootstrapping, the assumptions are simple random sampling and the samples are representative of the population.
 
@@ -181,18 +180,21 @@ mean(R_p)
 
 ## c) {-}
 
-What is one weakness of using the bootstrapping method?
+**What is one weakness of using the bootstrapping method?**
 
 *Solution:* The bootstrapping method assumes that the sample is representative of the whole population. However, when we have a small sample size, that is not always the case. There could be sampling errors which can skew the distribution of the sample. And the bootstrapping method cannot correct this error as it can only sample within this small set of data. As the saying goes, "garbage in, garbage out". If the sample is not representative of the population, the results obtained from bootstrap will not be accurate and will result in an incorrect inference of the population parameter.
 
+\newpage
 
 # Question 3. p-value, power {-}
 
-For the purpose of this question only, we treat the 2126 individuals as **the entire target population of newborns**. 
+**For the purpose of this question only, we treat the 2126 individuals as *the entire target population of newborns*.**
 
 ## a) {-}
 
-Calculate the mean and standard deviation of the baseline fetal heart rate.
+**Calculate the mean and standard deviation of the baseline fetal heart rate.**
+
+*Solution:*
 
 ```{r}
 #----Question 3--------------
@@ -205,7 +207,9 @@ sd_hr
 
 ## b) {-}
 
-Your sister claimed that, she read on a magazine, that the baseline fetal heart rates of fetuses with "suspect" health status are above average. Take a simple random sample of 10 fetuses with "suspect" health status, and measure their heart rate to obtain a sample mean of 141.68. Heart rates are scaled to be normally distributed. Does the sample provide evidence to reject null hypothesis? State your null and alternative hypothesis.
+**Your sister claimed that, she read on a magazine, that the baseline fetal heart rates of fetuses with "suspect" health status are above average. Take a simple random sample of 10 fetuses with "suspect" health status, and measure their heart rate to obtain a sample mean of 141.68. Heart rates are scaled to be normally distributed. Does the sample provide evidence to reject null hypothesis? State your null and alternative hypothesis.**
+
+*Solution:*
 
 ```{r}
 # 3.b
@@ -218,7 +222,9 @@ The p-value of one sided test is 0.0035. This sample provides evidence against t
 
 ## c) {-}
 
-So your sister asks you now, what is the probability that you can detect the baseline fetal heart rates of fetuses with "suspect" health status are at least 8.38 heart beats higher than average, using a one-sided test and sample size 10 and a 0.05 level test?
+**So your sister asks you now, what is the probability that you can detect the baseline fetal heart rates of fetuses with "suspect" health status are at least 8.38 heart beats higher than average, using a one-sided test and sample size 10 and a 0.05 level test?**
+
+*Solution:*
 
 $H_0: \mu = 133.30$, $H_A: \mu > 141.30$
 ```{r}
@@ -232,7 +238,9 @@ pnorm(q = cutoff, mean = 141.68, sd = 9.84/sqrt(10), lower.tail = FALSE)
 
 ## d) {-}
 
-A sample size of 10 fetuses with "suspect" health status will have at least 85% power to detect a difference of 8.38 heart beats. Use a simulation based approach to reproduce the sample size calculation for the baseline fetal heart rates of fetuses with "suspect" health status and average.
+**A sample size of 10 fetuses with "suspect" health status will have at least 85% power to detect a difference of 8.38 heart beats. Use a simulation based approach to reproduce the sample size calculation for the baseline fetal heart rates of fetuses with "suspect" health status and average.**
+
+*Solution:*
 
 ```{r}
 # 3.d
@@ -253,13 +261,17 @@ prop.table(table(power_distribution))
 
 The percentage of samples that results in a p-value less than 0.05 is 85.4%, which shows the study is powered at 85% to detect the difference.
 
-# Question 4.1 {-}
+\newpage
 
-Suppose this data represents the **population of newborns in one hospital** and you take a simple random sample of 100 babies from the population.
+# Question 4.1 One sample proportion {-}
+
+**Suppose this data represents the *population of newborns in one hospital* and you take a simple random sample of 100 babies from the population.**
 
 ## a) {-}
 
-What is the probability that your sample contains more than 25 babies has abnormal health status (1 = health, 2 = suspect, 3 = Pathological)? 
+**What is the probability that your sample contains more than 25 babies has abnormal health status (1 = health, 2 = suspect, 3 = Pathological)?**
+
+*Solution:*
 
 ```{r}
 ## ---- Question4.1------------------------------------------------------------
@@ -276,7 +288,10 @@ The probability of having more than 30 abnormal is 0.197.
 
 ## b) {-} 
 
-Turns out that your sample actually contains 20 babies with abnormal health status. What is the 95% confidence interval of this proportion? Can you use a normal approximation for this sample? Why or why not?
+**Turns out that your sample actually contains 20 babies with abnormal health status. What is the 95% confidence interval of this proportion? Can you use a normal approximation for this sample? Why or why not?**
+
+*Solution:*
+
 ```{r}
 # 4.1.a 
 mosaic::binom.test(x = 20, n = 100, ci.method = "Clopper-Pearson")
@@ -288,7 +303,9 @@ The two methods give similar 95% CIs. Normal approximation can be used here sinc
 
 ## c) {-}
 
-Another sample taken have the same proportion of event but the sample size is now only 10 and the count of abnormal is 2. Calculate the 95% CI using this sample and compare it with the one you have in b). Describe their difference and the reason why. 
+**Another sample taken have the same proportion of event but the sample size is now only 10 and the count of abnormal is 2. Calculate the 95% CI using this sample and compare it with the one you have in b). Describe their difference and the reason why.** 
+
+*Solution:*
 
 ```{r}
 # 4.1.c
@@ -304,30 +321,33 @@ If the sample size n is larger, the standard error(sigma/sqrt n) is smaller. The
 
 \newpage
 
-
-# Question 4.2 {-}
-You continue to work with the simple random sample. This time you take 100 babies from the a different hospital as the sample from the population. 
+# Question 4.2 One sample Rate{-}
+**You continue to work with the simple random sample. This time you take 100 babies from the a different hospital as the sample from the population.**
 
 ## a) {-}
 
-Your sample contains 30 babies with abnormal health status. What is the rate and 95% CI of health abnormality? Interpret your result. 
+**Your sample contains 30 babies with abnormal health status. Assuming each baby in your sample contribute one person-year, what is the rate and 95% CI of health abnormality? Interpret your result.**
+
+*Solution:*
 
 ```{r}
 # 4.2.a 
 stats::poisson.test(x = 30, T = 100)
 ```
 
-Rate: 0.3
-95% CI: [0.20,0.43]
+Rate: 0.3 cases per person-year
+95% CI: [0.20,0.43], unit: per person-year
 There is a 95% chance that the confidence interval [0.20,0.43] captures the true rate.
 
 ## b) {-}
 
-According to the data of the population with 2126 babies, 471 babies have abnormal health status. The expectation of the baby having abnormal health status of the original hospital is only 0.22. 
-Does your sample suggest that the babies coming from two hospitals have significantly different rate of abnormal health? Calculate the 95% CI for the rate ratio both by hand and using a one-step canned function. 
+**According to the data of the population with 2126 babies, 471 babies have abnormal health status. The expectation of the baby having abnormal health status of the original hospital is only 0.22.**
+**Does your sample suggest that the babies coming from two hospitals have significantly different rate of abnormal health? Calculate the 95% CI for the rate ratio both by hand and using a one-step canned function.**
+
+*Solution:*
 
 ```{r}
-# 4.1.b
+# 4.2.b
 stats::poisson.test(x = 30, T = 100)
 0.2024087/0.22 
 0.4282687/0.22
@@ -336,31 +356,17 @@ stats::poisson.test(x = 30, T = 471/2126*100)
 
 ```
 
-95% CI by hand: [0.92.1.95]
-95% CI by canned function: [0.91,0.933]
+95% CI by hand: [0.92.1.95] per person-year
+95% CI by canned function: [0.91,0.933] per person-year
 According to the Poisson test and by hand calculation, two 95% CI for the rate ratio both contains the null value 1. The 95% CI and the p-value suggests that the difference between two hospitals is not statistically significant. 
 
 \newpage
 
-# Question 5 {-}
+# Question 5 Regression (1) {-}
 
 ## a) {-}
 
-Your sister's partner said, their obstetrician told them that the Fetal Heart Rate could be a reflection of a lower value of short term variability. Can you conduct a linear regression to test it? Is it significant?
-
-*Solution:*
-
-```{r}
-#---Question 5----------------
-# 5.a
-reg1 <- lm(mean_value_of_long_term_variability ~ `baseline value`, data = df_fh)
-summary(reg1)
-```
-According to the linear regression, there is no significant association between baseline heart rate and value of short term variability. 
-
-## b) {-}
-
-Now you are getting curious with this dataset, and you want to use a logistic regression and predict the classification of fetal health diagnosis (Pathological vs non-pathological) using fetal movement as a binary determinant (normal vs. abnormal rate of movement). State the regression equation, Describe how will you process these three variables to fit a logistic regression. 
+**Now you are getting curious with this dataset, and you want to use a logistic regression and predict the classification of fetal health diagnosis (Pathological vs non-pathological) using fetal movement as a binary determinant (normal vs. abnormal rate of movement). State the regression equation, Describe how will you process these three variables to fit a logistic regression.**
 
 *Solution:*
 
@@ -388,12 +394,14 @@ $mov$ is the risk parameter.
 
 2. We can determine the abnormal threshold for the number of fetal movements per second based on previous literature and hypothesis and categorize this variable into a binary determinant. 
 
-## c) {-}
+## b) {-}
 
-Suppose the normal number of fetal movements per second is below 0.01. Fit the logistic regression model and provide and interpret the 95% CI for you parameter of interest. 
+**Suppose the normal number of fetal movements per second is below 0.01. Fit the logistic regression model and provide and interpret the 95% CI for you parameter of interest.** 
+
+*Solution:*
 
 ```{r}
-# 5.c
+# 5.b
 df_fh$f_mov <- ifelse(df_fh$fetal_movement>0.01, 1, 0)
 df_fh$f_patho <- ifelse(df_fh$fetal_health=="Pathological", 1 , 0)
 
@@ -409,14 +417,14 @@ $\theta$ is 1.542. This means that, the odds of receiving a pathological diagnos
 The confidence interval for the parameter of interest $\theta$ is 0.98, 2.35. We are 95% confident that the true odds ratio falls within this range.
 
 
-## d) {-}
+## c) {-}
 
-Can you calculate the intercept by hand? If yes, show your work, if no, explain what other values do you need to perform this calculation.
+**Can you calculate the intercept by hand? If yes, show your work, if no, explain what other values do you need to perform this calculation.**
 
 *Solution:* Using the equation $Intercept = log(\frac{\pi_0}{1-\pi_0})$, and since $\pi_0$ is the probability of receiving a pathological diagnosis, when fetal movement is lower than 0.01, we can first calculate the odds ratio of $\pi_0$ and then calculate the log this OR.
 
 ```{r}
-# 5.d
+# 5.c
 count <- df_fh %>% 
   count(f_mov, f_patho)
 prob <- count[2,3] / (count[2,3] + count[1,3])
@@ -424,13 +432,15 @@ odds <- prob/ (1-prob)
 log(odds)
 ```
 
-# Question 6 {-}
+\newpage
+
+# Question 6 Regression (2) {-}
 
 ## a) {-}
 
-You saw on another paper, that the pathological diagnosis is dependent on fetal movements and abnormal long term variability, provide a regression equation for this model. Remember to define all parameters.
+**You saw on another paper, that the pathological diagnosis is dependent on fetal movements and abnormal long term variability, provide a regression equation for this model. Remember to define all parameters.**
 
-For the purpose of this question, code the presence and absence of abnormal long term variability as 0,1, using the percentage of time with abnormal long term variability. (0% of variability means no abnormal variability, any number higher than 0% suggests there is long term variability)
+**For the purpose of this question, code the presence and absence of abnormal long term variability as 0,1, using the percentage of time with abnormal long term variability. (0% of variability means no abnormal variability, any number higher than 0% suggests there is long term variability)**
 
 *Solution:* 
 
@@ -461,9 +471,9 @@ $mov$ and $var$ are the risk parameters.
 
 ## b) {-}
 
-Fit the regression equation, and compare the intercept value, is it different than the fitted value in Question 5.c? Why?
+**Fit the regression equation, and compare the intercept value, is it different than the fitted value in Question 5.c? Why?**
 
-*Solution: *
+*Solution:*
 
 ``` {r}
 #----Question 6-----------------
@@ -478,7 +488,7 @@ The intercept for this model is -2.3926, which is different from the model above
 
 ## c) {-}
 
-You decided to draw a ROC curve and see how well your model works out. Use the pROC package to draw the curve, can the model produce accurate predictions?
+**You decided to draw a ROC curve and see how well your model works out. Use the pROC package to draw the curve, can the model produce accurate predictions?**
 
 *Solution: * According to the ROC curve, the model can predict the diagnosis very well. The AUROC is 100%, suggesting that our model can predict the diagnosis with 100% specificity and 100% sensitivity.
 ``` {r}
